tests/miniJava/neg/001574_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new this int [ 0 ] ; } }
